Fix navigation toggle button on mobile in the editor

--- a/varia/sass/full-site-editing/_editor.scss
+++ b/varia/sass/full-site-editing/_editor.scss
@@ -38,6 +38,9 @@
 	@import '../components/header/site-main-navigation';
 
 	.main-navigation {
+		@import "../blocks/button/style";
+		text-align: center;
+
 		.main-menu.footer-menu li {
 			a {
 				font-size: inherit;
