--- a/varia/style-editor.css
+++ b/varia/style-editor.css
@@ -1158,6 +1158,10 @@ table th,
 	}
 }
 
+.template-block .fse-template-part figure.fse-site-logo {
+	width: auto;
+}
+
 .fse-template-part .wp-block-cover .site-title,
 .fse-template-part .wp-block-cover .site-description,
 .fse-template-part .wp-block-cover-image .site-title,
@@ -1384,6 +1388,100 @@ table th,
 
 .fse-template-part body:not(.fse-enabled) .main-navigation a {
 	font-size: 1.2rem;
+}
+
+.fse-template-part .main-navigation {
+	/**
+ * Placeholder button style
+ * - Since buttons appear in various blocks,
+ *   let’s use a placeholder to keep them all
+ *   in-sync
+ */
+	/**
+ * Block Options
+ */
+	text-align: center;
+}
+
+.fse-template-part .main-navigation button,
+.fse-template-part .main-navigation .button,
+.fse-template-part .main-navigation input[type="submit"],
+.fse-template-part .main-navigation .wp-block-button__link,
+.fse-template-part .main-navigation .wp-block-file__button {
+	line-height: 1;
+	color: white;
+	cursor: pointer;
+	font-weight: bold;
+	font-family: sans-serif;
+	font-family: var(--font-headings, sans-serif);
+	font-size: 1.2rem;
+	background-color: blue;
+	border-radius: 9px;
+	border-width: 0;
+	padding: 16px 16px;
+}
+
+.fse-template-part .main-navigation button:before,
+.fse-template-part .main-navigation .button:before,
+.fse-template-part .main-navigation input[type="submit"]:before,
+.fse-template-part .main-navigation .wp-block-button__link:before,
+.fse-template-part .main-navigation .wp-block-file__button:before, .fse-template-part .main-navigation button:after,
+.fse-template-part .main-navigation .button:after,
+.fse-template-part .main-navigation input[type="submit"]:after,
+.fse-template-part .main-navigation .wp-block-button__link:after,
+.fse-template-part .main-navigation .wp-block-file__button:after {
+	content: '';
+	display: block;
+	height: 0;
+	width: 0;
+}
+
+.fse-template-part .main-navigation button:before,
+.fse-template-part .main-navigation .button:before,
+.fse-template-part .main-navigation input[type="submit"]:before,
+.fse-template-part .main-navigation .wp-block-button__link:before,
+.fse-template-part .main-navigation .wp-block-file__button:before {
+	margin-bottom: -0.12em;
+}
+
+.fse-template-part .main-navigation button:after,
+.fse-template-part .main-navigation .button:after,
+.fse-template-part .main-navigation input[type="submit"]:after,
+.fse-template-part .main-navigation .wp-block-button__link:after,
+.fse-template-part .main-navigation .wp-block-file__button:after {
+	margin-top: -0.11em;
+}
+
+.fse-template-part .main-navigation button:hover,
+.fse-template-part .main-navigation .button:hover,
+.fse-template-part .main-navigation input:hover[type="submit"],
+.fse-template-part .main-navigation .wp-block-button__link:hover,
+.fse-template-part .main-navigation .wp-block-file__button:hover, .fse-template-part .main-navigation button:focus,
+.fse-template-part .main-navigation .button:focus,
+.fse-template-part .main-navigation input:focus[type="submit"],
+.fse-template-part .main-navigation .wp-block-button__link:focus,
+.fse-template-part .main-navigation .wp-block-file__button:focus, .fse-template-part .main-navigation button.has-focus,
+.fse-template-part .main-navigation .has-focus.button,
+.fse-template-part .main-navigation input.has-focus[type="submit"],
+.fse-template-part .main-navigation .has-focus.wp-block-button__link,
+.fse-template-part .main-navigation .has-focus.wp-block-file__button {
+	color: white;
+	background-color: indigo;
+}
+
+.fse-template-part .main-navigation .wp-block-button.is-style-outline .wp-block-button__link {
+	color: blue;
+	background: transparent;
+	border: 2px solid currentcolor;
+	padding: 14px 16px;
+}
+
+.fse-template-part .main-navigation .wp-block-button.is-style-outline .wp-block-button__link:hover, .fse-template-part .main-navigation .wp-block-button.is-style-outline .wp-block-button__link:focus, .fse-template-part .main-navigation .wp-block-button.is-style-outline .wp-block-button__link.has-focus {
+	color: indigo;
+}
+
+.fse-template-part .main-navigation .wp-block-button.is-style-squared .wp-block-button__link {
+	border-radius: 0;
 }
 
 .fse-template-part .main-navigation .main-menu.footer-menu li a {
