--- a/varia/style-rtl.css
+++ b/varia/style-rtl.css
@@ -3698,38 +3698,38 @@ body.admin-bar .widget_eu_cookie_law_widget.widget.top {
  * Full Site Editing
  * - Full Site Editing overrides
  */
-.fse-template {
+.fse-template-part {
 	margin-bottom: 0;
 	margin-top: 0;
 }
 
-.fse-template .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
+.fse-template-part .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
 	color: inherit;
 }
 
-.fse-template .main-navigation .has-text-align-left > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-text-align-left > .main-menu.footer-menu {
 	justify-content: flex-start;
 }
 
-.fse-template .main-navigation .has-text-align-center > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-text-align-center > .main-menu.footer-menu {
 	justify-content: center;
 }
 
-.fse-template .main-navigation .has-text-align-right > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-text-align-right > .main-menu.footer-menu {
 	justify-content: flex-end;
 }
 
-.fse-template .main-navigation .has-background > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-background > .main-menu.footer-menu {
 	padding: 16px 0;
 }
 
 @media only screen and (min-width: 560px) {
-	.fse-template .main-navigation .has-background > .main-menu.footer-menu {
+	.fse-template-part .main-navigation .has-background > .main-menu.footer-menu {
 		padding: 16px;
 	}
 }
 
-.fse-template .main-navigation > div > .main-menu.footer-menu > .menu-item-has-children > a::after {
+.fse-template-part .main-navigation > div > .main-menu.footer-menu > .menu-item-has-children > a::after {
 	font-size: 0.6em;
 	vertical-align: middle;
 }
